--- a/LocationTracking/Info.plist
+++ b/LocationTracking/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>위치정보 사용할 떄만 허용</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>위치정보 항상허용</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
